# TezzSnake

./: CMakeLists.txt  README.md  run.ps1
include/: Artist.h  Definitions.h  Direction.h  Game.h  Grid.h  Main.h  Point2d.h  Point2f.h  Range.h  Size.h  Snake.h  Timer.h  Window.h
src/: Artist.cpp  Direction.cpp  Game.cpp  Main.cpp  Snake.cpp  Timer.cpp  Window.cpp
